# chip-pipeline

./: .gitignore  CMakeLists.txt  README.md  chip_tb.vcd
docs/scripts/: systemc_install.sh
include/: InstructionDecoder.hpp  InstructionFetch.hpp  Memory.hpp  Processor.hpp  Register.hpp  RegisterBank.hpp
src/: InstructionFetch.cpp  Memory.cpp  Register.cpp  RegisterBank.cpp  main.cpp
src/chip/: Chip.hpp
src/components/alu/: ALU.cpp  ALU.hpp
src/components/arith/: Adder.hpp
src/components/control/: ControlUnit.hpp
src/components/data_memory/: DataMemory.hpp
src/components/decoder/: Decoder.hpp
src/components/hazard/: HazardForward.hpp
src/components/instruction_memory/: InstructionMemory.hpp
src/components/memory/: Memory.hpp
src/components/mux/: Multiplexer.cpp  Multiplexer.hpp  Mux.hpp
src/components/pc/: PC.hpp  ProgramCounter.cpp  ProgramCounter.hpp
src/components/register/: EX_MEM.hpp  ID_EX.hpp  IF_ID.hpp  MEM_WB.hpp  Register.cpp  Register.hpp  RegisterBank.cpp
src/components/register/bank/: RegisterBank.cpp  RegisterBank.hpp
src/components/register/bank/intermediary/: EX-MEM.hpp  ID-EX.hpp  IF-ID.hpp  MEM-WB.hpp
src/components/register_bank/: RegisterBank.hpp
src/components/registers/: Register.cpp
src/components/sign_extend/: SignExtend.cpp  SignExtend.hpp
src/components/ula/: ULA.hpp
src/pipeline/: Chip.hpp  Execute.hpp  InstructionDecoder.hpp  InstructionFetch.hpp  MemoryAccess.hpp  WriteBack.hpp
src/pipeline/decode/: InstructionDecoder.cpp  InstructionDecoder.hpp
src/pipeline/fetch/: InstructionFetch.cpp  InstructionFetch.hpp  InstructionFetchTestbench.hpp
src/processor/: Processor.cpp  Processor.hpp
test/: ChipTb.cpp
test/components/: DataMemoryTb.cpp  DecoderTB.cpp  HazardForwardTb.cpp  MuxTb.cpp  PCTb.cpp  RegisterBankTb.cpp  UlaTb.cpp
testbench/: ProcessorTestbench.hpp  RegisterBankTb.cpp  RegisterTb.cpp
testbench/chip/: ChipTb.cpp
testbench/integration/: ExecuteTb.cpp  InstructionDecoderTb.cpp  InstructionFetchTb.cpp  MemoryAccessTb.cpp  WriteBackTb.cpp
testbench/unit/: ALUTb.cpp  AdderTb.cpp  ControlUnitTb.cpp  IF-IDTb.cpp  MemoryTb.cpp  MultiplexerTb.cpp  RegisterBankTb.cpp  RegisterTb.cpp
testbench/unit/memory/: MemoryIntTb.cpp  MemoryUIntTb.cpp
testbench/unit/mux/: Multiplexer4Tb.cpp  MultiplexerTb.cpp
